--- a/connect_four/index.html
+++ b/connect_four/index.html
@@ -17,9 +17,17 @@
         
         </div>
         <div class = 'stats'>
-            <h3>Streak</h3>
-            <p>Red Team</p>
-            <p>Blue Team</p>
+            <h2>Streak</h2>
+            <div class="streak">
+                <div class='team-1'>
+                    <h3>Red Team</h3>
+                    <h3 id="team-1-streak">0</h3>
+                </div>
+                <div class='team-2'>
+                    <h3>Blue Team</h3>
+                    <h3 id="team-2-streak">0</h3>
+                </div>
+            </div>
         </div>
     </div>
     <div class="message">
