refactoring for all game logic to exist in game object

--- a/connect_four/index.html
+++ b/connect_four/index.html
@@ -11,6 +11,7 @@
     <h1>Connect Four</h1>
     <div class='gameplay'>
         <div class="controls">
+            <button id="how-to">How To Play</button>
             <button id="start">Start New Game</button>
         </div>
         <div class="game-container">
