--- a/connect_four/index.html
+++ b/connect_four/index.html
@@ -8,11 +8,13 @@
     <script src="./js/app.js" type="text/javascript"></script>
 </head>
 <body>
-    <h1>Connect Four</h1>
+    <h1>Connect <span id='size'>Four</span></h1>
     <div class='gameplay'>
         <div class="controls">
             <button id="how-to">How To Play</button>
             <button id="start">Start New Game</button>
+            <button id="inc-board">Increase Board Size</button>
+            <button id="dec-board">Decrease Board Size</button>
         </div>
         <div class="game-container">
         
