random team colors

--- a/connect_four/index.html
+++ b/connect_four/index.html
@@ -23,11 +23,11 @@
             <h2>Score</h2>
             <div class="streak">
                 <div class='team-1'>
-                    <h3>Red Team</h3>
+                    <h3 id="team-1-name"></h3>
                     <h3 id="team-1-score">0</h3>
                 </div>
                 <div class='team-2'>
-                    <h3>Blue Team</h3>
+                    <h3 id="team-2-name"></h3>
                     <h3 id="team-2-score">0</h3>
                 </div>
             </div>
