update whos turn it is

--- a/index.html
+++ b/index.html
@@ -20,15 +20,21 @@
         
         </div>
         <div class = 'stats'>
-            <h2>Score</h2>
-            <div class="streak">
-                <div class='team-1'>
-                    <h3 id="team-1-name"></h3>
-                    <h3 id="team-1-score">0</h3>
-                </div>
-                <div class='team-2'>
-                    <h3 id="team-2-name"></h3>
-                    <h3 id="team-2-score">0</h3>
+            <div id="player-up">
+                <h2>Player Up</h2>
+                <!-- <h3 id="player-up"></h3> -->
+            </div>
+            <div>
+                <h2>Score</h2>
+                <div class="streak">
+                    <div class='team-1'>
+                        <h3 id="team-1-name"></h3>
+                        <h3 id="team-1-score">0</h3>
+                    </div>
+                    <div class='team-2'>
+                        <h3 id="team-2-name"></h3>
+                        <h3 id="team-2-score">0</h3>
+                    </div>
                 </div>
             </div>
         </div>
